--- a/19.html
+++ b/19.html
@@ -68,7 +68,10 @@
     <a href="https://인생도박주소.com/" target="_blank">
         <button>19</button>
     </a>
-    <a href=" https://yaburi59.com/posts/2356055" target="_blank">
+    <a href="https://yaburi59.com/posts/2356055" target="_blank">
+        <button>야부리</button>
+    </a>
+    <a href="https://123av.com/ko/dm1" target="_blank">
         <button>야부리</button>
     </a>
     <script>
